Sakura Ramen Webseite/style.css
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
}

.hero {
    background-image: url(assets/img/1_hero/JPG/hero_bg.jpg);
    height: 100vh;
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;

}

.navbar {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    margin-top: 20px;
}

.logo {
    width: 64px;
    height: 64px;
    margin-left: 110px;
}

.nav {
    display: flex;
    justify-content: space-between;
    margin-right: 110px;
}
.nav a {
    color: white;
    text-decoration: none;
    font-family: "Raleway", system-ui;
    font-size: 24px;
    margin-left: 24px;
    display: flex;
    align-items: center;
}

.nav a:hover {
    color: rgba(255, 255, 255, 0.44);
}

.nav a:last-child {
    color: white; !important;
}

.button_tel {
    background-color: #9F0908;
    padding: 8px 19px;
    border-radius: 8px;
    border: solid white;
}
.button_tel:hover {
    background-color: #cf0707;
}

.icon_phone {
    display: inline-block;
    vertical-align: middle;
    margin-right: 8px;
    width: 24px; 
    height: 24px;
}
    
.hero-header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
}

.hero-title {
    font-family:  "Raleway", system-ui;
    font-weight: bold;
    font-size: 96px;
    color: white;
    margin-bottom: 0;
    margin-top: 98px;
    text-align: center;

}
.subtitle {
    font-family:  "Raleway", system-ui;
    font-size: 24px;
    color: white;
    text-align: center;
}

.how_to_order {
    margin-top: 120px;
    font-family: Raleway, system-ui;
    font-size: 80px;
    font-weight: bold;
    color: #9F0908;
    display: flex;
    justify-content: center;
}

.order-options-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;

}

.order-option-left {
    margin-left: 160px;
}
.order-option-right {
    margin-right: 160px;
}

.img_style {
    width: 124px;
    margin-bottom: 16px;
    margin-left: 17px;
    margin-right: 17px;
}

.text_style {
    font-size: 56px;
    font-family: Economica, system-ui ;
    text-align: center;
    margin-top: 0;
}

.menu-section {
    margin-top: 120px;
    padding-bottom: 120px;
    background-image: url("assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
}

.menu-title {
    padding-top: 120px;
    font-family: Raleway, system-ui;
    font-size: 80px;
    font-weight: bold;
    color: #9F0908;
    margin-top: 120px;
    margin-bottom: 64px;
    text-align: center;
}

.menu-container {
    display: flex;
    flex-direction: column;
    gap: 56px;
}

.menu {
    margin-left: 160px;
    margin-right: 160px;
}

.menu img{
    width: min(95%, 352px);
    aspect-ratio: 1 / 1;
}

.menu:nth-child(odd) > img {
    float: left;
    padding-left: 80px;
}
.menu:nth-child(even) > img {
    float: right;
    padding-right: 80px;
}
.menu:nth-child(odd) > .menu_item {
    float: left;
    margin-left: 80px;
}
.menu:nth-child(even) > .menu_item {
    float: right;
    margin-right: 80px;
}
.menu_item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 352px;
    min-width: min(100%, 500px);
}

.item_price {
    color: #675E54;
    font-family: "Raleway", system-ui;
    font-weight: bold;
    font-size: 32px;
}

.menu_item > .list {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.menu_item h3 {
    margin-top: 0;
    margin-bottom: 16px;
    font-family: Economica, system-ui;
    font-weight: bold;
    font-size: 56px;
    text-align: left;
}

.find-us-title {
    font-family: Raleway, system-ui;
    font-size: 80px;
    font-weight: bold;
    color: #9F0908;
    display: flex;
    justify-content: center;
    margin-bottom: 8px;
}

.address {
    font-family: Raleway, system-ui;
    font-size: 24px;
    display: flex;
    justify-content: center;
    margin-bottom: 64px;
}

.address img {
    margin-right: 18px;
    width: 30px;
    height: 30px;
    display: inline-block;
    vertical-align: text-top;
}

.maps {
    width: 100%;
    height: 600px;
    border: 0;
}

footer {
    height: 144px;
    width: 100%;
}

.footer-wrapper {
    margin-top: 8px;
    background-color: #0A141E;
    height: 144px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 160px;
    padding-right: 160px;
}

.footer-logo-desktop {
    height: 44px;
}

.footer-icons img{
    width: 40px;
    height: 40px;
    margin-left: 8px;
}

.footer-logo-mobile {
    display:none;
}

@media (max-width: 1000px) {
    .nav a {
        font-size: 16px;
    }


}

@media (max-width: 850px) {
    .navbar {
        margin-top: 24px;
        height: 112px;
    }

    .logo {
        margin-left: 24px;
    }

    .nav {
        margin-right: 24px;
        display:unset;
    }

    .nav a:not(:last-child) {
        display: none;
    }

    .navbar {
        display: flex;
        align-items: unset;
        justify-content: space-between;
    }

    .hero-title {
        font-size: 72px;
    }

    .subtitle {
        font-size: 20px;
    }

    .how_to_order {
        margin-top: 96px;
        text-align: center;
        font-size: 64px;
    }

    .order-options-container {
        padding-left: 0;
        padding-right: 0;
        justify-content: space-between;
        margin-left: 24px;
        margin-right: 24px;
    }

    .menu img {
        display: block;
        margin-left: auto;
        margin-right: auto;
    }

    .order-option-left {
        margin-left: 0;
    }

    .order-option-right {
        margin-right: 0;
    }

    .img_style {
        width: 112px;
        display: block;
        margin-left: auto;
        margin-right: auto;
    }

    .menu-container {
        display: flex;
        gap: 32px;
    }

    .menu_item {
        min-width: min(44%, 500px);
    }

    .menu_item h3 {
        font-size: 32px;
    }

    .list {
        margin-left: 0;
        margin-right: 0;
    }

    .item_price {
        font-size: 24px;
    }

    .item_price > tbody > tr {
        display: flex;
        flex-direction: row;
        margin-left: auto;
        margin-right: auto;
        max-width: 400px;
    }

    .item_price > tbody > tr > td:first-child {
        flex-grow: 1;
    }

    .item_price > tbody > tr > td {
        padding-bottom: 8px;
    }

    .menu {
        margin-left: 24px;
        margin-right: 24px;
    }

    .menu:nth-child(odd) > img {
        padding-left: 24px;
    }
    .menu:nth-child(even) > img {
        padding-right: 24px;
    }
    .menu:nth-child(odd) > .menu_item {
        margin-left: 24px;
    }
    .menu:nth-child(even) > .menu_item {
        margin-right:24px;
    }

    .find-us-title {
        text-align: center;
        font-size: 64px;
    }

    .address {
        text-align: center;
        font-size: 20px;
        margin-bottom: 48px;
    }

    .footer-wrapper {
        display: flex;
        justify-content: space-between;
        padding-left: 24px;
        padding-right: 24px;
        margin-right: auto;
    }

    .footer-logo-desktop {
        height: 44px;
    }

    .footer-logo-mobile {
        display:none;
    }
}

@media (max-width: 550px) {
    .navbar {
        height: 64px;
        margin-top: 16px;
        margin-left: 16px;
        margin-right: 16px;
    }

    .logo {
        height: 40px;
        width: 40px;
    }

    .nav a {
        font-size: 16px;
    }

    .button_tel {
        height: 23px;
    }

    .hero-title {
        font-size: 44px;
    }

    .subtitle {
        font-size: 16px;
    }

    .how_to_order {
        margin-top: 72px;
        font-size: 40px;
    }

    .order-options-container {
        flex-direction: column;
        justify-content: unset;
    }

    .text_style {
        font-size: 32px;
        margin-bottom: 0;
    }

    .menu-section {
        margin-top: 72px;
    }

    .menu-title {
        padding-top: 72px;
        margin-top: 0;
    }

    .menu-title {
        font-size: 40px;
        margin-bottom: 40px;
    }

    .menu:nth-child(odd) > img {
        float: unset;
        padding-left: 0;
    }

    .menu:nth-child(even) > img {
        float: unset;
        padding-right: 0;
    }
    .menu:nth-child(odd) > .menu_item {
        float: unset;
        margin-left: 0;
    }
    .menu:nth-child(even) > .menu_item {
        float: unset;
        margin-right: 0;
    }

    .menu-container {
        gap: 32px;
    }

    .menu-section {
        padding-bottom: 72px;
    }

    .menu {
        margin-left: 16px;
        margin-right: 16px;
    }

    .menu img {
        width: min(100%, 352px)
    }

    .menu_item {
        min-width: min(100%, 500px);
        text-align: left;
        justify-content: unset;
        margin-top: 24px;
        height: unset;
    }

    .menu_item h3 {
        font-size: 32px;
        text-align: center;
    }

    .find-us-title {
        font-size: 40px;
    }

    .address {
        font-size: 16px;
    }

    .address img {
        width: 20px;
        height: 20px;
        margin-right: 2px;
    }

    footer {
        height: 86px;
    }

    .footer-wrapper {
        height: 86px;
    }

    .footer-icons img {
        height: 32px;
        width: 32px;
    }

    .footer-logo-desktop {
        display: none;
    }

    .footer-logo-mobile {
        display: unset;
        height: 40px;
    }

}

